trunk/Archive2/44/5d3dee81962447/output
main.cpp:27:9: error: unknown type name 'reference'; did you mean 'TReference'?
                const reference operator* ( ) const {
                      ^~~~~~~~~
                      TReference
main.cpp:5:108: note: 'TReference' declared here
    template <typename Impl, typename T, typename TDiff = std::ptrdiff_t, typename TPointer = T*, typename TReference = T&>
                                                                                                           ^
main.cpp:32:3: error: unknown type name 'reference'; did you mean 'TReference'?
                reference operator* ( ) {
                ^~~~~~~~~
                TReference
main.cpp:5:108: note: 'TReference' declared here
    template <typename Impl, typename T, typename TDiff = std::ptrdiff_t, typename TPointer = T*, typename TReference = T&>
                                                                                                           ^
main.cpp:37:9: error: unknown type name 'reference'; did you mean 'TReference'?
                const reference operator-> ( ) const {
                      ^~~~~~~~~
                      TReference
main.cpp:5:108: note: 'TReference' declared here
    template <typename Impl, typename T, typename TDiff = std::ptrdiff_t, typename TPointer = T*, typename TReference = T&>
                                                                                                           ^
main.cpp:42:3: error: unknown type name 'reference'; did you mean 'TReference'?
                reference operator-> ( ) {
                ^~~~~~~~~
                TReference
main.cpp:5:108: note: 'TReference' declared here
    template <typename Impl, typename T, typename TDiff = std::ptrdiff_t, typename TPointer = T*, typename TReference = T&>
                                                                                                           ^
4 errors generated.
